@@ -14,7 +14,7 @@ if($_POST['reset'] == 'do'){
 
     $app->dbQuery("UPDATE k_newsletter SET newsletterSendDate=NULL WHERE id_newsletter=".$_POST['id_newsletter']);
 
-    header("Location: analytic?id_newsletter=".$_POST['id_newsletter']);
+    header("Location: data-options?id_newsletter=".$_POST['id_newsletter']);
 }
 
 $data = $api->newsletterGet(array(
@@ -62,8 +62,16 @@ $recipUnsubRate	= number_format((@($stat['campaign']['campaingUnsubscribed'] / $
 
 <header><?php
     include(COREINC.'/top.php');
-    include(dirname(dirname(__DIR__)).'/ui/menu.php')
+    include(dirname(dirname(__DIR__)).'/ui/menu.php');
+    $step = 'stats';
+    include(dirname(dirname(__DIR__)).'/ui/steps.php');
     ?></header>
+
+<div class="inject-subnav-right hide">
+    <?php if($_REQUEST['id_newsletter'] > 0){ ?>
+    <li><a href="preview?id_newsletter=<?php echo $_REQUEST['id_newsletter'] ?>" class="btn btn-small" target="_blank">Prévisualiser</a></li>
+    <?php } ?>
+</div>
 
 <div id="app"><div class="wrapper">
 
@@ -163,10 +171,25 @@ $recipUnsubRate	= number_format((@($stat['campaign']['campaingUnsubscribed'] / $
 
         <?php } ?>
 
+        <div style="margin-top:40px; padding:10px 0px 3px 0px; border-top:1px solid #808080;">
+            <form method="post" action="analytic">
+                <input type="hidden"	name="id_newsletter"	value="<?php echo $data['id_newsletter'] ?>" />
+                <input type="checkbox"	name="reset"			value="do" />
+
+                Réinitialiser et consid&eacute;rer cette newsletter comme non envoy&eacute;e<br />
+                <input type="submit" class="btn btn-mini" value="Confirmer" />
+
+                <br /><br />
+                * Certains clients de messagerie n'affichant pas automatiquement les images, ce nombre peut &ecirc;tre en dessous de la r&eacute;alit&eacute;.
+            </form>
+        </div>
 
     </div>
 </div>
 
+<?php include(COREINC.'/end.php'); ?>
+<script language="javascript" type="text/javascript" src="ui/_flot/jquery.flot.js"></script>
+<script language="javascript" type="text/javascript" src="ui/_flot/jquery.flot.pie.min.js"></script>
 
 <?php if(is_array($stat['campaign']) && $data['newsletterSendDate'] != NULL){
 
@@ -198,9 +221,6 @@ $recipUnsubRate	= number_format((@($stat['campaign']['campaingUnsubscribed'] / $
 
     ?>
 
-    <?php include(COREINC.'/end.php'); ?>
-<script language="javascript" type="text/javascript" src="ui/_flot/jquery.flot.js"></script>
-<script language="javascript" type="text/javascript" src="ui/_flot/jquery.flot.pie.min.js"></script>
 
 <script type="text/javascript">
 
