@@ -1,5 +1,4 @@
 <?php
-echo 'zef';
 	if(!$app->userIsAdmin) header("Location: ./");
 
 	$data = $app->apiLoad('newsletter')->newsletterGet(array(
